[project]
name = "advent-of-code-2025"
version = "0.0.9"
description = "Solutions for Advent of Code 2025"
requires-python = ">=3.14"
dependencies = [
    "pytest",
]
[dependency-groups]
dev = [
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", # Ignore all docstring rules
    "COM812", # Trailing comma (conflicts with formatter)
    "T201", # Allow print statements (used for debugging)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Allow asserts in tests
    "PLR2004", # Allow magic values in tests
    "T201", # Allow print statements in tests
]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["src"]
